--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -47,7 +47,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 #监听器,监听客户端;若使用TLS/SSL,请在ssl/ssl.conf中修改相关配置
-<bind address=""
+<bind address="0.0.0.0"
       port="6667,6668,6669"
       type="clients">
 
@@ -460,4 +460,3 @@
 <bind address="&LocalHost;" 
       port="7000" 
       type="servers">
-
