--- a/ARKFUTURE/CONFIG/inspircd/inspircdssl.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircdssl.conf
@@ -438,12 +438,12 @@
 #<module name="regex_re2">
 #<module name="sqlite3">
 #<module name="ssl_gnutls">
-#<module name="ssl_openssl">
+<module name="ssl_openssl">
 #<module name="sslrehashsignal">
 
 ######模块的配置文件(请修改为自己的配置或者使用include加载相关模块配置)
 <include file="&ConfPath;/modulesconf.conf"> 
-#<include file="&SSLPath;/ssl.conf"> #SSL模块配置
+<include file="&SSLPath;/ssl.conf">
 
 
 #-#-#-#-#-#-#-#-#-#IRC Services(IRC 服务)-#-#-#-#-#-#-#-#
