--- a/ARKFUTURE/CONFIG/inspircd/ssl/ssl.conf
+++ b/ARKFUTURE/CONFIG/inspircd/ssl/ssl.conf
@@ -24,13 +24,13 @@
             compression="no"
             dhfile="&SSLPath;/dhparams.pem"
             ecdhcurve="prime256v1"
-            hash="sha256"
+            hash="sha3-256"
             keyfile="&SSLPath;/key.pem"
             renegotiation="no"
             requestclientcert="yes"
-            tlsv1="no"
             tlsv11="no"
-            tlsv12="yes">
+            tlsv12="yes"
+            tlsv13="yes">
 
 # 生成私钥 key.pem 命令 openssl ecparam -genkey -name prime256v1 -out key.pem
 # 已有 key.pem 生成 certificate.csr 签名请求 命令 openssl req -new -key key.pem -out certificate.csr 
