更新i2pd配置，将代理协议从socks5更改为socks

--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -67,7 +67,7 @@ name = I2Pd
 verify = true
 urls = https://reseed.i2p-projekt.de/,https://reseed2.i2p.net/,https://reseed.stormycloud.org/,https://reseed-fr.i2pd.xyz/,https://reseed.i2pgit.org/,https://reseed.onion.im/,https://coconut.incognet.io/,https://banana.incognet.io/,https://i2p.ghativega.in/,https://www2.mk16.de/,https://i2p.novg.net/,https://reseed-pl.i2pd.xyz/,https://reseed.memcpy.io/,https://reseed.diva.exchange/,https://i2pseed.creativecowpat.net:8443/ 
 yggurls = http://[324:71e:281a:9ed3::ace]:7070/
-proxy = socks5://127.0.0.1:5554
+proxy = socks://127.0.0.1:5554
 
 [addressbook]
 defaulturl = http://shx5vqsw7usdaunyzr2qmes2fq37oumybpudrd4jjj4e4vk4uusa.b32.i2p/hosts.txt
