更新i2pd配置文件，启用地址设置以提高网络连接稳定性

--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -22,40 +22,40 @@ port = 4567
 
 [http]
 enabled = true
-#address = 127.0.0.1
+address = 127.0.0.1
 port = 7070
 hostname = ARKFUTURE
 lang = chinese
 
 [httpproxy]
 enabled = true
-#address = 127.0.0.1
+address = 127.0.0.1
 port = 4444
 addresshelper = true
 
 [socksproxy]
 enabled = true
-#address = 127.0.0.1
+address = 127.0.0.1
 port = 4447
 
 [sam]
 enabled = true
-#address = 127.0.0.1
+address = 127.0.0.1
 port = 7656
 
 [bob]
 enabled = true
-#address = 127.0.0.1
+address = 127.0.0.1
 port = 2827
 
 [i2cp]
 enabled = true
-#address = 127.0.0.1
+address = 127.0.0.1
 port = 7654
 
 [i2pcontrol]
 enabled = true
-#address = 127.0.0.1
+address = 127.0.0.1
 port = 7650
 password = arkfuture
 
