更新i2pd配置文件，启用非中转模式并添加网状网络设置

--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -2,9 +2,8 @@
 ipv4 = true
 ipv6 = true
 nat = true
-floodfill = false
-ssu = false
-notransit = false
+notransit = true
+#floodfill = false
 loglevel = warn
 
 ## 服务
@@ -81,3 +80,7 @@ addressbook = true
 enabled = true
 ntpservers = pool.ntp.org
 ntpsyncinterval = 72
+
+[meshnets]
+yggdrasil = false
+yggaddress = 
