更新i2pd配置文件，修改密码为123456以便于访问

--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -23,7 +23,6 @@ port = 4567
 enabled = true
 address = 127.0.0.1
 port = 7070
-hostname = ARKFUTURE
 lang = chinese
 
 [httpproxy]
@@ -56,7 +55,7 @@ port = 7654
 enabled = true
 address = 127.0.0.1
 port = 7650
-password = arkfuture
+password = 123456
 
 [upnp]
 enabled = true
