更新inspircd配置文件，修正安全配置注释并更新安装脚本以使用新版本

--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -165,7 +165,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
 #<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
-#此配置参照(基于)官方文档修改,可自行修改
+#此配置(基于)官方文档修改,可自行修改
 <security announceinvites="dynamic"
           customversion="ARKFUTURE"
           genericoper="no"
@@ -246,18 +246,18 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#LOG(日志)#-#-#-#-#-#-#-#-#-#-#-#
-<log method="file"
-     type="*"
-     level="normal"
-     target="&dir.log;/inspircd.log"
-     flush="200">
+#<log method="file"
+#     type="*"
+#     level="normal"
+#     target="&dir.log;/inspircd.log"
+#     flush="200">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#MOD(模块)#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#MOD(插件)#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读https://docs.inspircd.org/4/modules/
-# 官方网站MODULES页面下普通模块
+# 官方网站MODULES页面下普通插件
 
-######模块
+######插件
 <module name="abbreviation">
 <module name="account">
 <module name="alias">
@@ -288,7 +288,7 @@
 <module name="classban">
 <module name="clearchan">
 <module name="cloak">
-#此模块将被弃用<module name="cloak_md5">
+#此插件将被弃用<module name="cloak_md5">
 <module name="cloak_sha256">
 <module name="cloak_static">
 <module name="cloak_user">
@@ -425,7 +425,7 @@
 #<module name="websocket">
 <module name="xline_db">
 
-######预编译模块(需要在编译时启用并且解除注释后才能使用)
+######预编译插件(需要在编译时启用并且解除注释后才能使用)
 #<module name="argon2">
 #<module name="geo_maxmind">
 #<module name="ldap">
@@ -441,12 +441,12 @@
 #<module name="ssl_openssl">
 #<module name="sslrehashsignal">
 
-######模块的配置文件(请修改为自己的配置或者使用include加载相关模块配置)
+######插件的配置文件(请修改为自己的配置或者使用include加载相关插件配置)
 <include file="&ConfPath;/modulesconf.conf"> 
-#<include file="&SSLPath;/ssl.conf"> #SSL模块配置
+#<include file="&SSLPath;/ssl.conf"> #SSL插件配置
 
 
-#-#-#-#-#-#-#-#-#-#IRC Services(IRC 服务)-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#IRC Services(IRC 管理服务)-#-#-#-#-#-#-#-#
 <link allowmask="*"
       name="127.0.0.1;"
       ipaddr="127.0.0.1;"
