更新inspircd配置文件，将“插件”更改为“模块”，并更新安装脚本以使用新版本4.6.0

--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -253,11 +253,11 @@
 #     flush="200">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#MOD(插件)#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#MOD(模块)#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读https://docs.inspircd.org/4/modules/
-# 官方网站MODULES页面下普通插件
+# 官方网站MODULES页面下普通模块
 
-######插件
+######模块
 <module name="abbreviation">
 <module name="account">
 <module name="alias">
@@ -288,7 +288,7 @@
 <module name="classban">
 <module name="clearchan">
 <module name="cloak">
-#此插件将被弃用<module name="cloak_md5">
+#此模块将被弃用<module name="cloak_md5">
 <module name="cloak_sha256">
 <module name="cloak_static">
 <module name="cloak_user">
@@ -425,7 +425,7 @@
 #<module name="websocket">
 <module name="xline_db">
 
-######预编译插件(需要在编译时启用并且解除注释后才能使用)
+######预编译模块(需要在编译时启用并且解除注释后才能使用)
 #<module name="argon2">
 #<module name="geo_maxmind">
 #<module name="ldap">
@@ -441,9 +441,9 @@
 #<module name="ssl_openssl">
 #<module name="sslrehashsignal">
 
-######插件的配置文件(请修改为自己的配置或者使用include加载相关插件配置)
+######模块的配置文件(请修改为自己的配置或者使用include加载相关模块配置)
 <include file="&ConfPath;/modulesconf.conf"> 
-#<include file="&SSLPath;/ssl.conf"> #SSL插件配置
+#<include file="&SSLPath;/ssl.conf"> #SSL模块配置
 
 
 #-#-#-#-#-#-#-#-#-#IRC Services(IRC 管理服务)-#-#-#-#-#-#-#-#
