更新inspircd配置文件，调整安全设置和连接端口，优化MOTD和规则文本以提升用户体验

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -95,9 +95,9 @@
            quitmsg="">
 <banfile action="allow"
          pattern="*">
-<dccallow action="allow"
-          blockchat="no"
-          length="0"
+<dccallow action="block"
+          blockchat="yes"
+          length="86400"
           maxentries="20">
 <deaf bypasschars=""
       servicebypasschars=""
