--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -1,11 +1,10 @@
 # Inspircd conf ---UTF-8
-# # confv2407231350 txtv07231350 servicev4 
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
 # 此配置文件中所有的密码均为随机生成,不作为固定密码使用
 #
-# 您可以在以下文档中查询详细配置来完善此配置
+# 您可以在以下文档中查询详细配置来完善此配置,我们的配置基于官方文档(每次都最新)
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
 # 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/4/configuration 进行详细配置
 
@@ -38,7 +37,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
 <admin name="arkfuture"
-       description="ARKFUTURE-IRC/WG|Nick:arkfuture"
+       description="ARKFUTURE-NET/Nick:arkfuture"
        email="2qwn2rrds@mozmail.com">
 
 
@@ -149,10 +148,11 @@
          extbanformat="name"
          fixedpart=""
          fixedquit=""
-         hostintopic="yes"
          invitebypassmodes="yes"
          nosnoticestack="no"
-         modesinlist="no"
+         maskinlist="yes"
+         maskintopic="yes"
+         modesinlist="opers"
          prefixpart="&quot;"
          prefixquit="Quit: "
          splitwhois="no"
@@ -162,22 +162,25 @@
          xlinemessage="您被禁止,联系管理员 ARKFUTURE 获取帮助">
 
 
-
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
 #<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
-#此配置(基于)官方文档修改,可自行修改
 <security announceinvites="dynamic"
           customversion="ARKFUTURE"
           genericoper="no"
+          publicxlinequit=""
           hidekills=""
           hideserver="ARKFUTURE"
-          hideulinekills="yes"
+          hideservicekills="yes"
           maxtargets="20"
           restrictbannedusers="yes"
           runasgroup=""
           runasuser=""
           userstats="Pu"
           maphide="">
+
+#<exception>标签定义了服务器的异常特权配置.此标记可以根据需要定义多次.
+<exception host=""
+           reason="">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#性能配置#-#-#-#-#-#-#-#-#-#-#
@@ -192,8 +195,9 @@
 #-#-#-#-#-#-#-#-#-#-#-#-#-WHOWAS选项-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<whowas>标签定义了/WHOWAS数据库的配置.此标记只能定义一次.
 <whowas groupsize="10"
-        maxgroups="10240"
-        maxkeep="3d">
+        maxgroups="10000"
+        maxkeep="3d"
+        nickupdate="yes">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#限制配置#-#-#-#-#-#-#-#-#-#-#-#
@@ -235,7 +239,7 @@
 <badnick nick="MemoServ" reason="为网络服务保留">
 
 #<badip>标签定义了永久Z线.此标记可以根据需要定义多次.
-<badip ipmask="1.1.1.1" reason="为防止攻击保留">
+<badip ipmask="255.255.255.255" reason="为防止攻击保留">
 
 #<badhost>标签定义了永久K线.此标记可以根据需要定义多次.
 <badhost host="*.example.com" reason="为防止攻击保留">
@@ -249,13 +253,12 @@
 #<log method="file"
 #     type="*"
 #     level="normal"
-#     target="&dir.log;/inspircd.log"
+#     target="&dir.log;/ircd.log"
 #     flush="200">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#MOD(模块)#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读https://docs.inspircd.org/4/modules/
-# 官方网站MODULES页面下普通模块
 
 ######模块
 <module name="abbreviation">
