更新inspircd配置文件，修改modesinlist设置以提升操作员管理能力

--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -152,7 +152,7 @@
          nosnoticestack="no"
          maskinlist="yes"
          maskintopic="yes"
-         modesinlist="opers"
+         modesinlist="yes"
          prefixpart="&quot;"
          prefixquit="Quit: "
          splitwhois="no"
