--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -88,11 +88,11 @@
             ipv6cidr="128"
             bootwait="10s"
             splitwait="10s">
-<connflood bootwait=""
-           maxconns=""
-           period=""
-           timeout=""
-           quitmsg="">
+<connflood bootwait="5m"
+           maxconns="5"
+           period="30s"
+           timeout="5m"
+           quitmsg="连接受到限制太多尝试">
 <banfile action="allow"
          pattern="*">
 <dccallow action="block"
