更新inspircd配置文件，调整连接限制和安全设置，优化MOTD文本以提升用户体验

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -28,66 +28,35 @@
 <codepage name="ascii"
           charset="ascii">
 <include file="&ConfPath;/ascii.conf">
-<cloak method="account"
-       case="upper"
-       class=""
-       invalidchar="strip"
-       prefix="AFE-"
-       suffix="-EFA">
-<cloak method="account-id"
-       case="upper"
-       class=""
-       invalidchar="strip"
-       prefix="AFE-"
-       suffix="-EFA">
 <cloak method="fingerprint"
-       case="upper"
+       case="lower"
        class=""
        invalidchar="strip"
-       length="64"
-       prefix="AFE-"
-       suffix="-EFA"
-       sanitize="yes">
-<cloak method="nickname"
-       case="upper"
-       class=""
-       invalidchar="strip"
-       prefix="AFE-"
-       suffix="-EFA">
-<cloak method="username"
-       case="upper"
-       class=""
-       invalidchar="strip"
-       prefix="AFE-"
-       suffix="-EFA"
+       length="32"
+       prefix="AFE"
+       suffix="NET"
        sanitize="yes">
 <cloak method="hmac-sha256"
-       key="gmxihdkwjsifkemciskefkdixljjsk"
-       prefix="AFE-"
-       suffix="-EFA"
-       case="upper"
-       hostparts="3"
-       pathparts="1"
-       class="">
-<cloak method="hmac-sha256-addr"
-       key="gmxihdkwjsifkemciskefkdixljjsk"
-       prefix="AFE-"
-       suffix="-EFA"
-       case="upper"
-       pathparts="1"
+       key="5LdTybtvP945DLgyHiMWVxti94hcJO"
+       prefix="AFE"
+       suffix="NET"
+       case="lower"
+       hostparts="1"
+       pathparts="0"
+       psl="ARKFUTURE"
        class="">
 <hostname charmap="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz.-_/0123456789">
 <autojoin channel=""
           delay="30s">
 <waitpong killonbadreply="no"
           sendsnotice="no">
-<connectban threshold=""
+<connectban threshold="5"
             banmessage="您的IP范围在太短的时间内尝试连接太多次.稍等片刻,您将能够连接."
-            banduration="15s"
+            banduration="1h"
             ipv4cidr="32"
             ipv6cidr="128"
-            bootwait="10s"
-            splitwait="10s">
+            bootwait="6m"
+            splitwait="5m">
 <connflood bootwait="5m"
            maxconns="5"
            period="30s"
