--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -51,7 +51,6 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标记可以根据需要定义多次.
-#如果需要为私人的irc,可以设置密码,使用password字段和hash字段
 <connect name="Main"
          allow="*"
          commandrate="1000"
@@ -72,7 +71,7 @@
          password=""
          hash=""
          motd="motd"
-         modes="+ix">   
+         modes="">   
 
 #标记定义定位克隆时应查看的IP地址位数.此标记只能定义一次.
 <cidr ipv4clone="32"
