更新inspircd配置文件，将日志级别从normal更改为warning，以提高日志记录的有效性

--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -249,11 +249,11 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#LOG(日志)#-#-#-#-#-#-#-#-#-#-#-#
-#<log method="file"
-#     type="*"
-#     level="normal"
-#     target="&dir.log;/ircd.log"
-#     flush="200">
+<log method="file"
+     type="*"
+     level="warning"
+     target="&dir.log;/ircd.log"
+     flush="200">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#MOD(模块)#-#-#-#-#-#-#-#-#-#-#-#
