--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -99,17 +99,20 @@
        classes="OperChat SACommands BanControl HostCloak Shutdown ServerLink"
        host=""
        autologin="strict"
-       vhost="">
+       vhost=""
+       level="100">
 <type name="GlobalOp"
        classes="OperChat BanControl HostCloak ServerLink"
        host=""
        autologin="strict"
-       vhost="">
+       vhost=""
+       level="70">
 <type name="Helper"
        classes="HostCloak"
        host=""
        autologin="strict"
-       vhost="">
+       vhost=""
+       level="50">
 
 #<oper>标签定义了一个服务器操作员帐户.此标记可以根据需要定义多次.
 # 这里必要的话请限制登录主机 "host" 字段
