更新inspircd配置文件，添加本机地址的异常特权配置

--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -181,8 +181,8 @@
           maphide="">
 
 #<exception>标签定义了服务器的异常特权配置.此标记可以根据需要定义多次.
-<exception host=""
-           reason="">
+<exception host="127.0.0.1"
+           reason="本机地址">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#性能配置#-#-#-#-#-#-#-#-#-#-#
