更新inspircd配置文件，修正管理员描述和链接配置中的多余分号，以提高配置的准确性

--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -37,7 +37,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
 <admin name="arkfuture"
-       description="ARKFUTURE-NET/Nick:arkfuture"
+       description="ARKFUTURE-NET"
        email="2qwn2rrds@mozmail.com">
 
 
@@ -453,13 +453,13 @@
 
 #-#-#-#-#-#-#-#-#-#IRC Services(IRC 管理服务)-#-#-#-#-#-#-#-#
 <link allowmask="*"
-      name="127.0.0.1;"
-      ipaddr="127.0.0.1;"
+      name="127.0.0.1"
+      ipaddr="127.0.0.1"
       port="7000"
       sendpass="123456"
       recvpass="123456">
-<services server="127.0.0.1;" 
+<services server="127.0.0.1" 
           silent="yes">
-<bind address="127.0.0.1;" 
+<bind address="127.0.0.1" 
       port="7000" 
       type="servers">
