--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -1,4 +1,4 @@
-# Inspircd conf ---UTF-8 ---ARKFUTUREconf[v1.3]
+# Inspircd conf ---UTF-8 ---ARKFUTUREconf[v1.3] ---server[4.6.0]
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
