更新inspircd配置文件，修改psl值为“system”，并更新版本信息以反映配置文件的最新状态

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -43,7 +43,7 @@
        case="lower"
        hostparts="1"
        pathparts="0"
-       psl="ARKFUTURE"
+       psl="system"
        class="">
 <hostname charmap="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz.-_/0123456789">
 <autojoin channel=""
