--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -1,10 +1,10 @@
-# Inspircd conf ---UTF-8 ---ARKFUTUREconf[v1.3] ---server[4.6.0]
+# Inspircd conf ---UTF-8 ---ARKFUTUREconf[v1.5] ---server[4.6.0]
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
-# 此配置文件中所有的密码均为随机生成,不作为固定密码使用
-#
-# 您可以在以下文档中查询详细配置来完善此配置,我们的配置基于官方文档(每次都最新)
+# 此配置文件中所有的密码均为随机生成,不作为固定密码使用,请注意修改密码,以及其他配置,以确保您的服务器安全
+# 
+# 您可以在以下文档中查询详细配置来完善此配置,我们的配置基于官方文档(每次都最新),每个月1日此配置版本号归零,作为修改次数
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
 # 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/4/configuration 进行详细配置
 
