删除不再使用的配置文件和脚本，以简化项目结构

--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -1,7 +1,7 @@
-# Inspircd conf ---UTF-8 ---ARKFUTUREconf[v1.5] ---server[4.6.0]
+# Inspircd conf ---UTF-8 ---ARKFUTUREconf[nossl1.5] ---server[4.6.0]
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
-# 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
+# 注意 ：此配置适用于 deb包 的 InspIRCd
 # 此配置文件中所有的密码均为随机生成,不作为固定密码使用,请注意修改密码,以及其他配置,以确保您的服务器安全
 # 
 # 您可以在以下文档中查询详细配置来完善此配置,我们的配置基于官方文档(每次都最新),每个月1日此配置版本号归零,作为修改次数
@@ -430,25 +430,9 @@
 #<module name="websocket">
 <module name="xline_db">
 
-######预编译模块(需要在编译时启用并且解除注释后才能使用)
-#<module name="argon2">
-#<module name="geo_maxmind">
-#<module name="ldap">
-#<module name="log_json">
-#<module name="log_syslog">
-#<module name="mysql">
-#<module name="pgsql">
-#<module name="regex_pcre2">
-#<module name="regex_posix">
-#<module name="regex_re2">
-#<module name="sqlite3">
-#<module name="ssl_gnutls">
-#<module name="ssl_openssl">
-#<module name="sslrehashsignal">
 
-######模块的配置文件(请修改为自己的配置或者使用include加载相关模块配置)
+######模块配置文件
 <include file="&ConfPath;/modulesconf.conf"> 
-#<include file="&SSLPath;/ssl.conf"> #SSL模块配置
 
 
 #-#-#-#-#-#-#-#-#-#IRC Services(IRC 管理服务)-#-#-#-#-#-#-#-#
