更新配置脚本以区分nossl和usessl配置，修正相关下载链接和模块配置

--- a/ARKFUTURE/CONFIG/inspircd/usessl/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/usessl/inspircd.conf
@@ -434,9 +434,9 @@
 <module name="argon2">
 <module name="geo_maxmind">
 <module name="ldap">
-<module name="log_json">
+#<module name="log_json">
 <module name="log_syslog">
-<module name="mysql">
+#<module name="mysql">
 <module name="pgsql">
 <module name="regex_pcre2">
 <module name="regex_posix">
