--- a/ARKFUTURE/CONFIG/inspircd/usessl/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/usessl/inspircd.conf
@@ -443,7 +443,7 @@
 <module name="regex_re2">
 <module name="sqlite3">
 #<module name="ssl_gnutls">
-<module name="ssl_openssl">
+#<module name="ssl_openssl">
 <module name="sslrehashsignal">
 
 ######模块的配置文件(请修改为自己的配置或者使用include加载相关模块配置)
