在make.sh中添加删除inspircd目录的命令，以确保环境干净；更新inspircd.conf中的预编译模块注释以提高可读性

--- a/ARKFUTURE/CONFIG/inspircd/usessl/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/usessl/inspircd.conf
@@ -430,7 +430,7 @@
 #<module name="websocket">
 <module name="xline_db">
 
-######预编译模块(需要在编译时启用并且解除注释后才能使用)
+######预编译模块(根据需要解除注释后启用,已编译进INSPIRCD)
 <module name="argon2">
 <module name="geo_maxmind">
 <module name="ldap">
