调整连接限制配置，增加连接尝试阈值并缩短封禁时长，以改善用户体验

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -50,16 +50,16 @@
           delay="30s">
 <waitpong killonbadreply="no"
           sendsnotice="no">
-<connectban threshold="5"
+<connectban threshold="20"
             banmessage="您的IP范围在太短的时间内尝试连接太多次.稍等片刻,您将能够连接."
-            banduration="1h"
+            banduration="1m"
             ipv4cidr="32"
             ipv6cidr="128"
-            bootwait="6m"
-            splitwait="5m">
-<connflood bootwait="5m"
-           maxconns="5"
-           period="30s"
+            bootwait="7m"
+            splitwait="7m">
+<connflood bootwait="10m"
+           maxconns="10"
+           period="60s"
            timeout="5m"
            quitmsg="连接受到限制太多尝试">
 <banfile action="allow"
