更新inspircd配置，移除不再需要的CC.mmdb下载和禁用geo_maxmind模块

--- a/ARKFUTURE/CONFIG/inspircd/usessl/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/usessl/inspircd.conf
@@ -432,7 +432,7 @@
 
 ######预编译模块(根据需要解除注释后启用,已编译进INSPIRCD)
 <module name="argon2">
-<module name="geo_maxmind">
+#<module name="geo_maxmind">
 <module name="ldap">
 #<module name="log_json">
 <module name="log_syslog">
