更新helpop.conf和modulesconf.conf，修正帮助命令和模块配置的文本格式

--- a/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf
@@ -1,26 +1,25 @@
 #helpop -- UTF-8 
 <config format="xml">
 
-<alias text="HELP" replace="HELPOP $2-">
-
-<helpop key="start" title="ARKFUTURE-IRC 帮助系统" value="
+<alias text="HELPOP" replace="HELP $2-">
+<helpmsg nohelp="您搜索的主题没有帮助,请重试">
+<helpop key="start" title="帮助系统" value="
 此系统为命令和模式提供帮助.
 指定问题或命令名称作为此命令的参数.
+<helptopic key="start" title="InspIRCd 帮助系统" value="
+该系统提供关于命令和模式的帮助信息。
+请将您的问题或命令名称作为该命令的参数。
 
-/HELPOP CUSER    -      查看用户命令列表
-/HELPOP COPER    -      查看OP命令列表
-/HELPOP UMODES   -      查看用户模式列表
-/HELPOP CHMODES  -      查看频道模式列表
-/HELPOP SNOMASKS -      查看OP服务器通知遮罩列表
-/HELPOP EXTBANS  -      查看延长封禁列表
-/HELPOP INDEX    -      查看帮助主题列表
-这些详细的命令暂没有翻译成中文,若您有兴趣,请自行查询
-部分命令或模式无效,因为部分插件已经废弃
-我们尽可能把所有即时可用的模块插件都添加上,让您有更好的IRC体验
-欢迎您给我们提出意见/建议/修改配置 
+/HELP CUSER    -      查看[用户]命令列表
+/HELP COPER    -      查看[管理员]命令列表
+/HELP UMODES   -      查看[用户]模式列表
+/HELP CHMODES  -      查看[道模]式列表
+/HELP SNOMASKS -      查看[管理员]通知掩码列表
+/HELP EXTBANS  -      查看[封禁]类型列表
+/HELP INDEX    -      查看帮助主题索引
 ">
 
-<helpop key="cuser" title="用户命令列表" value="
+<helpop key="cuser" title="[用户]命令列表" value="
 ACCEPT      ADMIN       AWAY        COMMANDS    CYCLE       DCCALLOW
 FPART       HEXIP       INFO        INVITE      ISON        JOIN
 KICK        KNOCK       LINKS       LIST        LUSERS      MAP
