--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -1,4 +1,4 @@
-#helpop -- UTF-8 
+#modulesconf -- UTF-8 
 <config format="xml">
 
 <anticaps lowercase="abcdefghijklmnopqrstuvwxyz"
@@ -83,7 +83,6 @@
             backoff="2"
             maxbackoff="5m">
 <hidechans affectsopers="no">
-<helpmsg nohelp="您搜索的主题没有任何帮助.请再试一次.">
 <include file="&ConfPath;/helpop.conf">
 <helpmode ignorehideoper="no"
           markhelpers="yes">
