更新helpop.conf和motd.txt，修正帮助命令的格式并统一使用HELPOP前缀

--- a/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf
@@ -3,19 +3,19 @@
 
 <alias text="HELPOP" replace="HELP $2-">
 <helpmsg nohelp="您搜索的主题没有帮助,请重试">
-<helpop key="start" title="帮助系统" value="
+<helpop key="star" title="帮助系统" value="
 此系统为命令和模式提供帮助.
 指定问题或命令名称作为此命令的参数.
 该系统提供关于命令和模式的帮助信息.
 请将您的问题或命令名称作为该命令的参数.
 
-/HELP CUSER    -      查看[用户]命令列表
-/HELP COPER    -      查看[管理员]命令列表
-/HELP UMODES   -      查看[用户]模式列表
-/HELP CHMODES  -      查看[频道]模式列表
-/HELP SNOMASKS -      查看[管理员]通知掩码列表
-/HELP EXTBANS  -      查看[封禁]类型列表
-/HELP INDEX    -      查看帮助主题索引
+/HELPOP CUSER    -      查看[用户]命令列表
+/HELPOP COPER    -      查看[管理员]命令列表
+/HELPOP UMODES   -      查看[用户]模式列表
+/HELPOP CHMODES  -      查看[频道]模式列表
+/HELPOP SNOMASKS -      查看[管理员]通知掩码列表
+/HELPOP EXTBANS  -      查看[封禁]类型列表
+/HELPOP INDEX    -      查看帮助主题索引
 ">
 
 <helptopic key="mode" title="/MODE <target> [[(+|-)]<modes> [<mode-parameters>]]" value="
