更新helpop.conf，修正帮助信息的描述并统一帮助命令的前缀

--- a/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf
@@ -2,8 +2,8 @@
 <config format="xml">
 
 <alias text="HELPOP" replace="HELP $2-">
-<helpmsg nohelp="您搜索的主题没有帮助,请重试">
-<helpop key="star" title="帮助系统" value="
+<helpmsg nohelp="您搜索的这个主题中,没有帮助信息,请重试">
+<helptopic key="start" title="InspIRCd Help System" value="
 此系统为命令和模式提供帮助.
 指定问题或命令名称作为此命令的参数.
 该系统提供关于命令和模式的帮助信息.
@@ -20,9 +20,7 @@
 
 <helptopic key="mode" title="/MODE <target> [[(+|-)]<modes> [<mode-parameters>]]" value="
 设置或查看 <target> 的模式.
-
 /MODE <target> - 显示 <target> 的当前模式.
-
 /MODE <channel> <list mode char> - 列出 <channel> 中的封禁/例外等设置.
 
 - <target> 可以是频道或用户的名称.
@@ -30,8 +28,8 @@
 - <mode-parameters> 是与模式相关的参数.
 
 要查看所有用户模式和频道模式列表，请分别使用：
-/HELP UMODES    - 用户模式 
-/HELP CHMODES   - 频道模式 
+/HELPOP UMODES    - 用户模式 
+/HELPOP CHMODES   - 频道模式 
 ">
 
 <helptopic key="cuser" title="[用户]命令列表" value="
