更新helpop.conf，修正帮助主题的描述并添加示例用法

--- a/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf
@@ -3,12 +3,15 @@
 
 <alias text="HELPOP" replace="HELP $2-">
 <helpmsg nohelp="您搜索的这个主题中,没有帮助信息,请重试">
-<helptopic key="start" title="InspIRCd Help System" value="
-此系统为命令和模式提供帮助.
+<helptopic key="start" title="帮助系统" value="
+此系统为[命令]和[模式]提供帮助.
 指定问题或命令名称作为此命令的参数.
 该系统提供关于命令和模式的帮助信息.
 请将您的问题或命令名称作为该命令的参数.
+我们会继续添加我们的帮助主题
 
+例如:/HELPOP <参数>
+以下为可用的:
 /HELPOP CUSER    -      查看[用户]命令列表
 /HELPOP COPER    -      查看[管理员]命令列表
 /HELPOP UMODES   -      查看[用户]模式列表
