更新irssi.conf，添加新的聊天网络配置并调整现有网络设置

--- a/ARKFUTURE/CONFIG/inspircd/other/irssi.conf
+++ b/ARKFUTURE/CONFIG/inspircd/other/irssi.conf
@@ -15,17 +15,33 @@ servers = (
     tls_verify = "yes";
     tls_cert = "";
   },
-  {
-    address = "irc.rizon.net";
-    chatnet = "Rizon";
+    {
+    address = "irc.oftc.net";
+    chatnet = "OFTC";
     port = "6697";
     use_tls = "yes";
     tls_verify = "yes";
     tls_cert = "";
   },
   {
-    address = "irc.oftc.net";
-    chatnet = "OFTC";
+    address = "irc.undernet.org ";
+    chatnet = "Undernet";
+    port = "6697";
+    use_tls = "yes";
+    tls_verify = "yes";
+    tls_cert = "";
+  },
+  {
+    address = "irc.azirc.net";
+    chatnet = "AIN";
+    port = "6697";
+    use_tls = "yes";
+    tls_verify = "yes";
+    tls_cert = "";
+  },
+    {
+    address = "irc.hackint.org";
+    chatnet = "Hackint";
     port = "6697";
     use_tls = "yes";
     tls_verify = "yes";
@@ -49,7 +65,14 @@ chatnets = {
     sasl_username = "";
     sasl_password = "";
   };
-  Rizon = {
+  OFTC = {
+    type = "IRC";
+    autosendcmd = "^msg NickServ identify 你的密码 你的NICK;wait -OFTC 2500";
+    max_kicks = "4";
+    max_msgs = "20";
+    max_whois = "30";
+  };
+  Undernet = {
     type = "IRC";
     max_kicks = "4";
     max_msgs = "20";
@@ -58,20 +81,33 @@ chatnets = {
     sasl_username = "";
     sasl_password = "";
   };
-  OFTC = {
+    AIN = {
     type = "IRC";
-    autosendcmd = "^msg NickServ identify 你的密码 你的NICK;wait -OFTC 2500";
     max_kicks = "4";
     max_msgs = "20";
     max_whois = "30";
+    sasl_mechanism = "PLAIN";
+    sasl_username = "";
+    sasl_password = "";
+  };
+    Hackint = {
+    type = "IRC";
+    max_kicks = "4";
+    max_msgs = "20";
+    max_whois = "30";
+    sasl_mechanism = "PLAIN";
+    sasl_username = "";
+    sasl_password = "";
   };
 };
 
 channels = (
   { name = "#lobby"; chatnet = "ARKFUTURE"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "LiberaChat"; autojoin = "No"; },
-  { name = "#lobby"; chatnet = "Rizon"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "OFTC"; autojoin = "No"; },
+  { name = "#lobby"; chatnet = "Undernet"; autojoin = "No"; },
+  { name = "#lobby"; chatnet = "AIN"; autojoin = "No"; },
+  { name = "#lobby"; chatnet = "Hackint"; autojoin = "No"; },
 );
 
 aliases = {
