更新irssi.conf，修改聊天服务器地址为irc.URL

--- a/ARKFUTURE/CONFIG/inspircd/other/irssi.conf
+++ b/ARKFUTURE/CONFIG/inspircd/other/irssi.conf
@@ -1,6 +1,6 @@
 servers = (
   {
-    address = "irc.ARKFUTURE";
+    address = "irc.URL";
     chatnet = "ARKFUTURE";
     port = "6667";
     use_tls = "no";
