--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -33,13 +33,13 @@
        class=""
        invalidchar="strip"
        length="32"
-       prefix="AFE"
-       suffix="NET"
+       prefix="AFENet/"
+       suffix=""
        sanitize="yes">
 <cloak method="hmac-sha256"
        key="5LdTybtvP945DLgyHiMWVxti94hcJO"
-       prefix="AFE"
-       suffix="NET"
+       prefix="AFENet"
+       suffix="IP"
        case="lower"
        hostparts="1"
        pathparts="0"
