在i2pd配置中新增outproxy选项，指向http://exit.stormycloud.i2p

--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -30,6 +30,7 @@ enabled = true
 address = 127.0.0.1
 port = 4444
 addresshelper = true
+outproxy = http://exit.stormycloud.i2p
 
 [socksproxy]
 enabled = true
