更新i2pd配置，修改outproxy选项的注释以提供额外的代理地址信息

--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -11,13 +11,11 @@ loglevel = warn
 enabled = true
 published = true
 port = 4567
-#proxy = socks://127.0.0.1:5554
 
 [ssu2]
 enabled = true
 published = true
 port = 4567
-#proxy = socks://127.0.0.1:5554
 
 [http]
 enabled = true
@@ -30,7 +28,7 @@ enabled = true
 address = 127.0.0.1
 port = 4444
 addresshelper = true
-outproxy = http://exit.stormycloud.i2p
+outproxy = http://exit.stormycloud.i2p #or http://purokishi.i2p
 
 [socksproxy]
 enabled = true
