新增SSL支持的inspircd安装脚本，更新README以反映新的安装流程和配置说明；移除旧的usessl配置文件

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -1,4 +1,5 @@
 #modulesconf -- UTF-8 
+#-#-#-#-#-#-#-#-#-#官方模块配置-#-#-#-#-#-#-#-#
 <config format="xml">
 
 <anticaps lowercase="abcdefghijklmnopqrstuvwxyz"
@@ -27,7 +28,7 @@
            denyrange="">
 <codepage name="ascii"
           charset="ascii">
-<include file="&ConfPath;/ascii.conf">
+<include file="&ConfPath;ascii.conf">
 <cloak method="fingerprint"
        case="lower"
        class=""
@@ -83,7 +84,7 @@
             backoff="2"
             maxbackoff="5m">
 <hidechans affectsopers="no">
-<include file="&ConfPath;/helpop.conf">
+<include file="&ConfPath;helpop.conf">
 <helpmode ignorehideoper="no"
           markhelpers="yes">
 <inviteexception bypasskey="yes">
@@ -119,7 +120,7 @@
 <mkpasswd operonly="no">
 <pbkdf2 iterations="12288"
         length="32">
-<permchanneldb filename="&ConfPath;/permchannels.conf"
+<permchanneldb filename="&ConfPath;permchannels.conf"
                listmodes="yes"
                operonly="yes"
                saveperiod="5s"
@@ -170,8 +171,43 @@
 <starttls provider="">
 <timedbans sendnotice="yes">
 <watch maxwatch="32">
-<xlinedb filename="&ConfPath;/xline.db"
+<xlinedb filename="&ConfPath;xline.db"
          saveperiod="5s"
          backoff="2"
          maxbackoff="5m">
-<maxmind file="&ConfPath;/CC.mmdb">
+
+
+#-#-#-#-#-#-#-#-#-#额外的模块配置-#-#-#-#-#-#-#-#
+<maxmind file="&ConfPath;CC.mmdb">
+
+# 配置SSL(如果让此项生效,需要自行编译和启用OPENSSL模块,如果是官方安装包,此配置不生效)
+<bind address=""
+      port="6697"
+      sslprofile="Clients"
+      type="clients">
+<bind address=""
+      port="7001"
+      sslprofile="Servers"
+      type="servers">
+
+<openssl onrehash="yes">
+
+<sslprofile name="Clients"
+            provider="openssl"
+            cafile="&SSLPath;ca.pem"
+            certfile="&SSLPath;cert.pem"
+            crlfile=""
+            ciphers="DEFAULT"
+            compression="no"
+            dhfile="&SSLPath;dhparams.pem"
+            ecdhcurve="prime256v1"
+            hash="sha3-256"
+            keyfile="&SSLPath;key.pem"
+            renegotiation="no"
+            requestclientcert="yes"
+            tlsv11="no"
+            tlsv12="yes"
+            tlsv13="yes">
+
+
+#-#-#-#-#-#-#-#-#-#IRC Services(IRC 管理服务)-#-#-#-#-#-#-#-#
