--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -1,27 +1,29 @@
-# Inspircd conf ---UTF-8 ---ARKFUTUREconf[nossl1.5] ---server[4.6.0]
+# Inspircd conf ---UTF-8 ---ARKFUTUREconf[ssl1.5] ---server[4.6.0]
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
-# 注意 ：此配置适用于 deb包 的 InspIRCd
-# 此配置文件中所有的密码均为随机生成,不作为固定密码使用,请注意修改密码,以及其他配置,以确保您的服务器安全
-# 
-# 您可以在以下文档中查询详细配置来完善此配置,我们的配置基于官方文档(每次都最新),每个月1日此配置版本号归零,作为修改次数
+# !!!!此配置文件中所有的密码均为随机生成,不作为固定密码使用,请注意修改密码,才能使用到生产环境中
+# !!!!预编译模块需要[自行编译安装]或者[使用我们已编译好的全模块软件包]后才可以使用,否则将会报错,这也是我们注释掉第三方模块的原因
+
+# 您可以在以下文档中查询详细配置来完善此配置,我们的配置基于官方文档
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
 # 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/4/configuration 进行详细配置
+# 也请查看我们的README.md文件以获取更多信息 https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/README.md
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
+# <path> 标记定义了服务器的目录结构.此标记只能定义一次.
 <path configdir="&dir.config;"
       datadir="&dir.data;"
       logdir="&dir.log;"
       moduledir="&dir.module;"
       runtimedir="&dir.runtime;">
-# <define> 标记允许您定义一个实体(定义服务器变量)
+# <define> 标记允许您定义一个实体(定义服务器变量);使用方法:&SSLPath;ca.crt 代替 /etc/inspircd/ssl/ca.crt
 <define name="ConfPath"
-        value="&dir.config;/conf">
+        value="&dir.config;/conf/">
 <define name="TxtPath"
-        value="&dir.config;/txt">
+        value="&dir.config;/txt/">
 <define name="SSLPath"
-        value="&dir.config;/ssl">
+        value="&dir.config;/ssl/">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -94,7 +96,6 @@
        commands="SETHOST SETIDENT SETIDLE CHGNAME CHGHOST CHGIDENT">
 
 #<type>标签定义了服务器操作员的类型.此标记可以根据需要定义多次.
-# 这里必要的话请限制登录主机 "host" 字段
 <type name="NetAdmin"
        classes="OperChat SACommands BanControl HostCloak Shutdown ServerLink"
        host=""
@@ -115,20 +116,18 @@
        level="50">
 
 #<oper>标签定义了一个服务器操作员帐户.此标记可以根据需要定义多次.
-# 这里必要的话请限制登录主机 "host" 字段
-# NetAdmin：服务器管理；GlobalOp：服务器操作员；Helper：帮助员
 # 使用include来加载一个单独的操作员账户配置文件
-<include file="&ConfPath;/opers.conf">
+<include file="&ConfPath;opers.conf">
 
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
 #部分命令如果没有权限就停止使用<files>标签
 #使用时请注释其中一个标签
-<files motd="&TxtPath;/motd.txt"
-       opermotd="&TxtPath;/opermotd.txt"
-       quotes="&TxtPath;/quotes.txt"
-       rules="&TxtPath;/rules.txt">
+<files motd="&TxtPath;motd.txt"
+       opermotd="&TxtPath;opermotd.txt"
+       quotes="&TxtPath;quotes.txt"
+       rules="&TxtPath;rules.txt">
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
@@ -234,10 +233,6 @@
         nickmasks="no"
         trigger="95.5">
 
-#<maxlist>标签的定义数量的清单模式，可以建立在一个通道
-<maxlist chan="*"
-         limit="100000">
-
 #<badnick>标签定义了永久Q线.此标记可以根据需要定义多次.
 <badnick nick="ChanServ" reason="为网络服务保留">
 <badnick nick="NickServ" reason="为网络服务保留">
@@ -250,8 +245,12 @@
 #<badhost>标签定义了永久K线.此标记可以根据需要定义多次.
 <badhost host="*.example.com" reason="为防止攻击保留">
 
+#<maxlist>标签的定义数量的清单模式，可以建立在一个通道
+<maxlist chan="*"
+         limit="100000">
 
-#-#-#-#-#-#-#-#-#-#-#-#-#LOG(日志)#-#-#-#-#-#-#-#-#-#-#-#
+
+#-#-#-#-#-#-#-#-#-#-#-#-#日志相关#-#-#-#-#-#-#-#-#-#-#-#
 <log method="file"
      type="*"
      level="warning"
@@ -259,10 +258,10 @@
      flush="200">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#MOD(模块)#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#模块#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读https://docs.inspircd.org/4/modules/
 
-######模块
+######Default Modules
 <module name="abbreviation">
 <module name="account">
 <module name="alias">
@@ -430,19 +429,22 @@
 #<module name="websocket">
 <module name="xline_db">
 
-######模块配置文件
-<include file="&ConfPath;/modulesconf.conf"> 
+######Extra Modules
+#<module name="argon2">
+#<module name="geo_maxmind">
+#<module name="ldap">
+#<module name="log_json"> 注意:此模块因为库的使用问题,将不会编译在安装包中
+#<module name="log_syslog">
+#<module name="mysql">
+#<module name="pgsql">
+#<module name="regex_pcre2">
+#<module name="regex_posix">
+#<module name="regex_re2">
+#<module name="sqlite3">
+#<module name="ssl_gnutls">
+#<module name="ssl_openssl">
+#<module name="sslrehashsignal">
 
+######模块的配置文件
+<include file="&ConfPath;modulesconf.conf"> 
 
-#-#-#-#-#-#-#-#-#-#IRC Services(IRC 管理服务)-#-#-#-#-#-#-#-#
-<link allowmask="*"
-      name="127.0.0.1"
-      ipaddr="127.0.0.1"
-      port="7000"
-      sendpass="123456"
-      recvpass="123456">
-<services server="127.0.0.1" 
-          silent="yes">
-<bind address="127.0.0.1" 
-      port="7000" 
-      type="servers">
