更新inspircd配置文件，替换本地文件引用为远程链接，并修改部分注释以增强可读性

--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -122,12 +122,16 @@
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
-#部分命令如果没有权限就停止使用<files>标签
-#使用时请注释其中一个标签
-<files motd="&TxtPath;motd.txt"
-       opermotd="&TxtPath;opermotd.txt"
-       quotes="&TxtPath;quotes.txt"
-       rules="&TxtPath;rules.txt">
+#<files motd="&TxtPath;motd.txt"
+#       opermotd="&TxtPath;opermotd.txt"
+#       quotes="&TxtPath;quotes.txt"
+#       rules="&TxtPath;rules.txt">
+
+<execfiles motd="wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
+           opermotd="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
+           quotes="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
+           rules="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
+
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
@@ -179,7 +183,7 @@
           userstats="Pu"
           maphide="">
 
-#<exception>标签定义了服务器的异常特权配置.此标记可以根据需要定义多次.
+#<exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标记可以根据需要定义多次.
 <exception host="127.0.0.1"
            reason="本机地址">
 
