更新inspircd配置文件，修改execfiles标签中的链接引用为wget命令以增强可用性

--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -45,7 +45,6 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
-#监听器,监听客户端;若使用TLS/SSL,请在ssl/ssl.conf中修改相关配置
 <bind address="0.0.0.0"
       port="6667,6668,6669"
       type="clients">
@@ -126,11 +125,10 @@
 #       opermotd="&TxtPath;opermotd.txt"
 #       quotes="&TxtPath;quotes.txt"
 #       rules="&TxtPath;rules.txt">
-
 <execfiles motd="wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
-           opermotd="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
-           quotes="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
-           rules="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
+           opermotd="wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
+           quotes="wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
+           rules="wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
 
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
