更新inspircd配置，添加多服务器桥接和服务框架的绑定设置

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -181,17 +181,8 @@
 <maxmind file="&ConfPath;CC.mmdb">
 
 # 配置SSL(如果让此项生效,需要自行编译和启用OPENSSL模块,如果是官方安装包,此配置不生效)
-<bind address=""
-      port="6697"
-      sslprofile="Clients"
-      type="clients">
-<bind address=""
-      port="7001"
-      sslprofile="Servers"
-      type="servers">
 
 <openssl onrehash="yes">
-
 <sslprofile name="Clients"
             provider="openssl"
             cafile="&SSLPath;ca.pem"
@@ -210,4 +201,17 @@
             tlsv13="yes">
 
 
-#-#-#-#-#-#-#-#-#-#IRC Services(IRC 管理服务)-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
+# 多服务器桥接
+<autoconnect period="2m"
+             server="irc1.eample.com">
+<link allowmask="0.0.0.0"
+      bind="0.0.0.0"
+      ipaddr="IP"
+      hidden="no"
+      name="irc1.eample.com"
+      port="7000"
+      recvpass="3SQrJvhutfsKBVw4rbxt"
+      sendpass="3SQrJvhutfsKBVw4rbxt"
+      timeout="15s">
+# 服务框架
