--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -48,6 +48,9 @@
 <bind address="0.0.0.0"
       port="6667,6668,6669"
       type="clients">
+<bind address="0.0.0.0"
+      port="7000"
+      type="servers">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
