更新inspircd配置，修正服务器地址和IP地址以确保连接稳定性

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -202,16 +202,14 @@
 
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
-# 多服务器桥接
 <autoconnect period="2m"
-             server="irc1.eample.com">
+             server="irc1.exp.cn">
 <link allowmask="0.0.0.0"
       bind="0.0.0.0"
-      ipaddr="IP"
+      ipaddr="172.18.33.240"
       hidden="no"
-      name="irc1.eample.com"
+      name="irc1.exp.cn"
       port="7000"
       recvpass="3SQrJvhutfsKBVw4rbxt"
       sendpass="3SQrJvhutfsKBVw4rbxt"
       timeout="15s">
-# 服务框架
