更新inspircd配置，修正服务器名称和IP地址以确保连接稳定性

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -206,10 +206,10 @@
              server="irc1.exp.cn">
 <link allowmask="0.0.0.0"
       bind="0.0.0.0"
-      ipaddr="172.18.33.240"
-      hidden="no"
-      name="irc1.exp.cn"
+      name="irc1.exp.org"
+      ipaddr="IP"
       port="7000"
+      hidden="no"
       recvpass="3SQrJvhutfsKBVw4rbxt"
       sendpass="3SQrJvhutfsKBVw4rbxt"
       timeout="15s">
